# fast-mocker

./: .editorconfig  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  conftest.py  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
docs/: index.md  usage.md
docs/code/: developing.md  main.md
docs/code/parse_api/: model.md  template.md
mocks/: animals.example.yml  users.example.yml
src/parse_api/: model.py  templates.py
src/parse_api/tests/: test_models.py  test_templates.py
